--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 /*------------------------------------------------header----------------------------------------------- */
 
-body {
-    margin: 5%;
-    font-family: 'Poppins', sans-serif;
 
+body {
+    margin: 0%;
+    font-family: 'Poppins', sans-serif;
+    background-color: rgb(241, 241, 241);
+
+}
+
+.margin-article {
+    margin: 4% 4% 4% 4%;
 }
 
 header {
@@ -14,16 +20,19 @@ header {
 
 header a {
     text-decoration: none;
+    color: black;
 }
 
 .menu-bar {
     display: flex;
     align-items: center;
+
 }
 
 header div li {
     list-style: none;
     padding-right: 20px;
+
 
 }
 
@@ -82,7 +91,12 @@ header div li {
 
 
 /* ---------------------------------------------Section-3 --------------------------------------------------------------*/
+.container {
+    margin-top: 150px;
+}
+
 .center-align {
+
     text-align: center;
     font-size: 2em;
 }
@@ -95,6 +109,7 @@ header div li {
     justify-content: center;
     align-items: center;
     padding: 25px;
+    background-color: rgb(255, 255, 255);
 
 
 }
@@ -121,4 +136,58 @@ header div li {
 
 }
 
+.see-more {
+    text-align: right;
+    padding-right: 50px;
+    color: rgb(255, 0, 21);
+    font-size: 20px;
+    font-weight: 500;
+}
+
 /* ---------------------------------------------End Section-3 --------------------------------------------------------------*/
+
+
+/* --------------------------------------------section-4 --------------------------------------------*/
+.flexible {
+
+    margin: 0px 25px 0px 25px;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.flexible>div>img {
+    height: auto;
+    width: 500px;
+    border-radius: 10px;
+}
+
+/* ------------------------------------------End section-4 ----------------------------------------------*/
+
+
+
+/* -------------------------------------------------section-5{footer}------------------------------------------- */
+.sec-5 {
+    font-size: 1.3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(19, 0, 63);
+    color: white;
+    margin-top: 100px 0px 0px 0px;
+    padding: 10px;
+}
+
+.icon {
+    padding: 20px;
+}
+
+.sec-5-center {
+    justify-items: center;
+    display: grid;
+
+
+
+}
+
+/* ------------------------------------------------------end section-5{footer}--------------------------------------------- */
