--- a/style.css
+++ b/style.css
@@ -191,3 +191,14 @@ header div li {
 }
 
 /* ------------------------------------------------------end section-5{footer}--------------------------------------------- */
+
+
+
+
+
+
+
+/* ------media query-----------------media query---------------media query---------------media query-----------------media query-------------------------media query---------------------- */
+
+
+/*------------- mobile view------------ */
