--- a/style.css
+++ b/style.css
@@ -40,7 +40,23 @@ header div li {
 
 
 /*------------------------------------------------------- section-1 ------------------------------------------*/
-.btn-1 {
+.sec-1-container {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.sec-1-h1 {
+    font-size: 3em;
+}
+
+.sec-1-para {
+    color: black;
+}
+
+.sec-1-btn {
     padding: 10px 20px;
     background-color: rgb(255, 0, 21);
     color: rgb(255, 255, 255);
@@ -49,21 +65,6 @@ header div li {
     border-radius: 30px;
 }
 
-.title {
-    font-size: 3em;
-}
-
-.para {
-    color: black;
-}
-
-.sec-1-container {
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
 
 /*---------------------------------------------------- End Section-1----------------------------------------------- */
 
@@ -95,17 +96,24 @@ header div li {
 
 
 /* ---------------------------------------------Section-3 --------------------------------------------------------------*/
-.container {
+.sec-3-container {
     margin-top: 150px;
 }
 
-.center-align {
+.sec-3-h2 {
 
     text-align: center;
     font-size: 2em;
 }
 
+.sec-3-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
+    justify-items: center;
 
+}
 
 .collection {
     border: 1px solid rgb(236, 239, 243);
@@ -129,15 +137,6 @@ header div li {
 
 .empty {
     color: rgb(0, 0, 0);
-}
-
-.grid-section {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 25px;
-    grid-row-gap: 25px;
-    justify-items: center;
-
 }
 
 .see-more {
@@ -166,12 +165,21 @@ header div li {
     border-radius: 10px;
 }
 
+.sec-4-btn {
+    padding: 10px 20px;
+    background-color: rgb(255, 0, 21);
+    color: rgb(255, 255, 255);
+    font-size: 1.3em;
+    border: none;
+
+}
+
 /* ------------------------------------------End section-4 ----------------------------------------------*/
 
 
 
 /* -------------------------------------------------section-5{footer}------------------------------------------- */
-.sec-5 {
+.sec-5-container {
     font-size: 1.3em;
     display: flex;
     justify-content: center;
@@ -179,18 +187,17 @@ header div li {
     background-color: rgb(19, 0, 63);
     color: white;
     margin-top: 100px 0px 0px 0px;
-    padding: 10px;
+    padding: 0px;
 }
 
 .icon {
     padding: 20px;
 }
 
-.sec-5-center {
-    justify-items: center;
+.sec-5-align {
     display: grid;
 
-
+    justify-items: center;
 
 }
 
@@ -206,48 +213,33 @@ header div li {
 
 
 /*------------- mobile view------------ */
-@media only screen and (max-width:1000px) {
-    body {
-        margin: 2%;
-        background-color: rgb(239, 255, 250);
-    }
-
-    header .menu-bar {
+@media only screen and (max-width:700px) {
+    .menu-bar {
         display: none;
     }
 
     header {
-        justify-content: space-around;
+        justify-content: center;
     }
 
-    .sec-1-container {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        justify-items: center;
 
-    }
 
+
+
+
+
+
+
+
+
+
+    .sec-1-container,
     .sec-2-container,
-    .greed {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        margin: 100px;
-        justify-items: center;
-
-
-
-    }
-
-
-
-
-
-
-
-
-    .container,
+    .sec-3-grid,
+    .see-more,
     .flexible,
-    .sec-5 {
+    .sec-5-container,
+    .sec-3-h2 {
         display: none;
 
     }
