--- a/style.css
+++ b/style.css
@@ -252,6 +252,11 @@ header div li {
 
     /* end section-1 */
 
+    .sec-2-device-views {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+
+    }
 
 
 
@@ -262,7 +267,6 @@ header div li {
 
 
 
-    .sec-2-container,
     .sec-3-grid,
     .see-more,
     .flexible,
