--- a/style.css
+++ b/style.css
@@ -258,20 +258,42 @@ header div li {
 
     }
 
+    /* end section-2 */
 
-
-
-
-
-
-
-
-
-    .sec-3-grid,
-    .see-more,
-    .flexible,
-    .sec-5-container,
     .sec-3-h2 {
+        text-align: center;
+
+    }
+
+    .sec-3-grid {
+        align-items: center;
+        justify-items: center;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .see-more {
+        text-align: right;
+        margin-right: 25px;
+    }
+
+    .flexible {
+
+
+        display: grid;
+        align-items: center;
+        grid-template-columns: repeat(1, 1fr);
+        text-align: center;
+
+    }
+
+
+
+
+
+
+
+    .sec-5-container {
         display: none;
 
     }
